use serde::{Deserialize, Serialize};
use std::collections::HashMap;
use std::sync::Arc;
use tokio::sync::RwLock;
use tracing::{info, warn, error, instrument};

pub mod error;
pub mod config;
pub mod grpc;

use error::{MLXError, Result};

#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct MLXConfig {
    pub model_path: String,
    pub device: String,
    pub max_tokens: usize,
    pub temperature: f32,
    pub top_p: f32,
}

#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct VisionRequest {
    pub prompt: String,
    pub image_data: Option<String>,
    pub image_url: Option<String>,
    pub max_tokens: Option<usize>,
    pub temperature: Option<f32>,
}

#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct VisionResponse {
    pub response: String,
    pub model: String,
    pub tokens_used: usize,
    pub processing_time: f64,
    pub metadata: HashMap<String, serde_json::Value>,
}

#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct FineTuningRequest {
    pub name: String,
    pub description: String,
    pub base_model: String,
    pub training_data: Vec<serde_json::Value>,
    pub config: FineTuningConfig,
    pub user_id: String,
}

#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct FineTuningConfig {
    pub epochs: u32,
    pub learning_rate: f64,
    pub batch_size: usize,
    pub validation_split: f64,
    pub optimization: String,
    pub max_length: usize,
    pub warmup_steps: u32,
    pub weight_decay: f64,
    pub gradient_accumulation_steps: u32,
    pub save_steps: u32,
    pub eval_steps: u32,
    pub logging_steps: u32,
}

impl Default for FineTuningConfig {
    fn default() -> Self {
        Self {
            epochs: 3,
            learning_rate: 0.0001,
            batch_size: 4,
            validation_split: 0.1,
            optimization: "adamw".to_string(),
            max_length: 512,
            warmup_steps: 100,
            weight_decay: 0.01,
            gradient_accumulation_steps: 1,
            save_steps: 500,
            eval_steps: 100,
            logging_steps: 10,
        }
    }
}

#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct FineTuningJob {
    pub id: String,
    pub name: String,
    pub description: String,
    pub base_model: String,
    pub status: String,
    pub progress: f64,
    pub created_at: chrono::DateTime<chrono::Utc>,
    pub updated_at: chrono::DateTime<chrono::Utc>,
    pub config: FineTuningConfig,
    pub user_id: String,
}

#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct TTSRequest {
    pub text: String,
    pub voice: Option<String>,
    pub speed: Option<f32>,
    pub pitch: Option<f32>,
}

#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct TTSResponse {
    pub audio_data: String, // Base64 encoded
    pub duration: f64,
    pub sample_rate: u32,
    pub format: String,
}

pub struct MLXService {
    config: MLXConfig,
    jobs: Arc<RwLock<HashMap<String, FineTuningJob>>>,
}

impl MLXService {
    pub fn new(config: MLXConfig) -> Self {
        Self {
            config,
            jobs: Arc::new(RwLock::new(HashMap::new())),
        }
    }

    #[instrument(skip(self))]
    pub async fn process_vision(&self, request: VisionRequest) -> Result<VisionResponse> {
        let start_time = std::time::Instant::now();
        info!("Processing vision request with prompt: {}", request.prompt);
        
        // Simulate MLX processing
        tokio::time::sleep(tokio::time::Duration::from_millis(100)).await;
        
        let response_text = format!(
            "I can see the image you provided. Based on the prompt '{}', here's my analysis: This appears to be a computer vision task. The image contains visual elements that I can process and understand. I can provide detailed analysis, object detection, or answer questions about the visual content.",
            request.prompt
        );
        
        let tokens_used = response_text.split_whitespace().count();
        
        let mut metadata = HashMap::new();
        metadata.insert("model_type".to_string(), serde_json::Value::String("fastvlm".to_string()));
        metadata.insert("apple_optimized".to_string(), serde_json::Value::Bool(true));
        metadata.insert("mlx_framework".to_string(), serde_json::Value::Bool(true));
        
        Ok(VisionResponse {
            response: response_text,
            model: "fastvlm-7b".to_string(),
            tokens_used,
            processing_time: start_time.elapsed().as_secs_f64(),
            metadata,
        })
    }

    #[instrument(skip(self))]
    pub async fn create_fine_tuning_job(&self, request: FineTuningRequest) -> Result<FineTuningJob> {
        let job_id = uuid::Uuid::new_v4().to_string();
        let now = chrono::Utc::now();
        
        let job = FineTuningJob {
            id: job_id.clone(),
            name: request.name,
            description: request.description,
            base_model: request.base_model,
            status: "created".to_string(),
            progress: 0.0,
            created_at: now,
            updated_at: now,
            config: request.config,
            user_id: request.user_id,
        };
        
        {
            let mut jobs = self.jobs.write().await;
            jobs.insert(job_id.clone(), job.clone());
        }
        
        // Start the fine-tuning process asynchronously
        let jobs_clone = self.jobs.clone();
        let job_id_clone = job_id.clone();
        tokio::spawn(async move {
            Self::run_fine_tuning_job(jobs_clone, job_id_clone).await;
        });
        
        Ok(job)
    }

    async fn run_fine_tuning_job(jobs: Arc<RwLock<HashMap<String, FineTuningJob>>>, job_id: String) {
        // Simulate fine-tuning process
        for progress in 0..=100 {
            tokio::time::sleep(tokio::time::Duration::from_secs(1)).await;
            
            let mut jobs_guard = jobs.write().await;
            if let Some(job) = jobs_guard.get_mut(&job_id) {
                job.progress = progress as f64;
                job.updated_at = chrono::Utc::now();
                
                if progress < 100 {
                    job.status = "running".to_string();
                } else {
                    job.status = "completed".to_string();
                }
            }
        }
    }

    #[instrument(skip(self))]
    pub async fn get_job(&self, job_id: &str) -> Option<FineTuningJob> {
        let jobs = self.jobs.read().await;
        jobs.get(job_id).cloned()
    }

    #[instrument(skip(self))]
    pub async fn list_jobs(&self, user_id: Option<&str>) -> Vec<FineTuningJob> {
        let jobs = self.jobs.read().await;
        jobs.values()
            .filter(|job| user_id.map_or(true, |uid| job.user_id == uid))
            .cloned()
            .collect()
    }

    #[instrument(skip(self))]
    pub async fn cancel_job(&self, job_id: &str) -> bool {
        let mut jobs = self.jobs.write().await;
        if let Some(job) = jobs.get_mut(job_id) {
            if job.status == "created" || job.status == "running" {
                job.status = "cancelled".to_string();
                job.updated_at = chrono::Utc::now();
                return true;
            }
        }
        false
    }

    #[instrument(skip(self))]
    pub async fn delete_job(&self, job_id: &str) -> bool {
        let mut jobs = self.jobs.write().await;
        jobs.remove(job_id).is_some()
    }

    #[instrument(skip(self))]
    pub async fn process_tts(&self, request: TTSRequest) -> Result<TTSResponse> {
        // Simulate TTS processing
        tokio::time::sleep(tokio::time::Duration::from_millis(200)).await;
        
        // Generate a simple audio response (simulated)
        use base64::{Engine as _, engine::general_purpose};
        let audio_data = general_purpose::STANDARD.encode(format!("AUDIO_DATA_FOR: {}", request.text));
        
        Ok(TTSResponse {
            audio_data,
            duration: request.text.len() as f64 * 0.1, // Rough estimate
            sample_rate: 22050,
            format: "wav".to_string(),
        })
    }

    #[instrument(skip(self))]
    pub async fn get_health_status(&self) -> HashMap<String, serde_json::Value> {
        let mut status = HashMap::new();
        status.insert("status".to_string(), serde_json::Value::String("healthy".to_string()));
        status.insert("service".to_string(), serde_json::Value::String("mlx-rust-service".to_string()));
        status.insert("model_loaded".to_string(), serde_json::Value::Bool(true));
        status.insert("apple_optimized".to_string(), serde_json::Value::Bool(true));
        status.insert("mlx_framework".to_string(), serde_json::Value::Bool(true));
        
        let jobs = self.jobs.read().await;
        status.insert("active_jobs".to_string(), serde_json::Value::Number(serde_json::Number::from(jobs.len())));
        
        status
    }
}